--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
   "name": "Hangman",
   "version": "1.0.0",
-  "description": "",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -16,5 +15,16 @@
   "bugs": {
     "url": "https://github.com/Kiallitch/HangWords/issues"
   },
-  "homepage": "https://github.com/Kiallitch/HangWords#readme"
+  "homepage": "https://github.com/Kiallitch/HangWords#readme",
+  "description": "",
+  "dependencies": {
+    "body-parser": "^1.17.2",
+    "express": "^4.15.3",
+    "express-session": "^1.15.3",
+    "express-validator": "^3.2.1",
+    "fs": "0.0.1-security",
+    "morgan": "^1.8.2",
+    "mustache": "^2.3.0",
+    "mustache-express": "^1.2.5"
+  }
 }
